[gd_scene load_steps=11 format=3 uid="uid://cumltahf0qpyi"]

[ext_resource type="Script" uid="uid://do1juptun06q8" path="res://scripts/hud.gd" id="1_6fi6k"]
[ext_resource type="Texture2D" uid="uid://bgvnxgaceb36u" path="res://assets/icons/backward_icon.png" id="1_oo0fn"]
[ext_resource type="Texture2D" uid="uid://bjgcj1ja71uec" path="res://assets/icons/forward_icon.png" id="2_5ysmq"]
[ext_resource type="Texture2D" uid="uid://o7vhkl1djkdl" path="res://assets/icons/wevik_icon.png" id="3_5ysmq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uo2fv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_047uy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ysmq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5pdws"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0i1j5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hd3ao"]

[node name="Hud" type="Node2D"]
script = ExtResource("1_6fi6k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(720, 64)
layout_mode = 2

[node name="BackwardButton" type="Button" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
icon = ExtResource("1_oo0fn")

[node name="Label" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "K Ö B Ö Z Ő"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ForwardButton" type="Button" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
icon = ExtResource("2_5ysmq")

[node name="ContentContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(720, 1364)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(720, 1364)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FooterContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(720, 64)
layout_mode = 2

[node name="BackwardButton" type="Button" parent="VBoxContainer/FooterContainer"]
custom_minimum_size = Vector2(123, 123)
layout_mode = 2
icon = ExtResource("1_oo0fn")
icon_alignment = 1

[node name="HomeButton" type="Button" parent="VBoxContainer/FooterContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_uo2fv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_047uy")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5ysmq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5pdws")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0i1j5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hd3ao")
icon = ExtResource("3_5ysmq")
flat = true
icon_alignment = 1

[node name="ForwardButton" type="Button" parent="VBoxContainer/FooterContainer"]
custom_minimum_size = Vector2(123, 123)
layout_mode = 2
icon = ExtResource("2_5ysmq")
icon_alignment = 1

[connection signal="pressed" from="VBoxContainer/HeaderContainer/BackwardButton" to="." method="_on_backward_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HeaderContainer/ForwardButton" to="." method="_on_forward_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FooterContainer/BackwardButton" to="." method="_on_backward_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FooterContainer/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FooterContainer/ForwardButton" to="." method="_on_forward_button_pressed"]
